--- a/8_dongchang.html
+++ b/8_dongchang.html
@@ -61,7 +61,7 @@
      
 </script>
    <script src="javascript/index.js"></script>
-     <link rel="stylesheet" href="style_p/index.css">
+     <link rel="stylesheet" href="style_p/Puzzle.css">
     <script src="javascript/zepto.min.js"></script>       
         <div class="circle">
             <button class="clue" id="but" onclick="backtotop()"><i class="fa-solid fa-circle-arrow-up"></i></button>
