--- a/4_changwu.html
+++ b/4_changwu.html
@@ -71,7 +71,7 @@
 
 </div>
 <div id="divineroom" style="width: 100%;text-align:center;display:none">
-     <img id="divpic" src="USR/image/87.jpg" style="margin:auto;" width="100%" alt="" />
+     <img id="divpic" src="" style="margin:auto;" width="100%" alt="" />
       <a id="gotourl" href="#" class="button primary" style="font-size:18px;font-weight:bold;width:100%">觀看籤詩說明</a>
 </div>
 
