--- a/4_changwu.html
+++ b/4_changwu.html
@@ -53,7 +53,7 @@
         <img id="divinetool"  src="image/drawbox.png" style="float:none; " class="ig" onclick="startgo();">
  
     </div>
-   <button id="btn" style="font-size:18px;font-weight:bold;display:none;border-radius:20px;width:100%; background-color: blue;color: white;" onclick="startgoB()">進行爻杯</button>
+   <button id="btn"  onclick="startgoB()">進行爻杯</button>
 
 
 <div class="row">
