--- a/2_yongan.html
+++ b/2_yongan.html
@@ -28,7 +28,11 @@
                 <img src="pic/2-1_yongan.JPG" alt="godpic" class="godpic">      
             </div>
             <p class="godintro">
-                &emsp; &emsp;第一站，阿寶首先來到了永安村的土地伯公廟，恰好遇見了在打掃環境的廟公，好奇的阿寶向廟公詢問，過去這裡都如何幫土地公做生日的呢，廟公說：「我們這早些年農曆2/2和8/15號會舉辦「吃福」的活動，每位會員會向爐主繳交一斤的豬肉代金，讓爐主辦桌，大家一起吃個飯」。阿寶了解了原來吃福就是幫土地公做生日的意思，代金則是用現金取代實際物品的意思，也是現代人比較方便的做法，阿這才知道原來可以使用這種方法來籌措經費。<br> 
+                <p class="godintro1">土地公名稱:永安永安宮<br>地點:23.986922, 121.582469 <br> &emsp; &emsp;吉安鄉明仁二街16巷6號 
+                </p>
+                &emsp; &emsp;第二站，阿寶首先來到了永安村的土地伯公廟，恰好遇見了在打掃環境的廟公，好奇的阿寶向廟公詢問，過去這裡都如何幫土地公做生日的呢，廟公答道：「我們早些年在農曆二月二號和八月十五號，會舉辦『吃福』的活動，每位會員向爐主繳交一斤的豬肉代金，讓爐主辦桌，大家一起吃個飯。」
+                &emsp; &emsp;阿寶發現原來吃福就是幫土地公做生日的意思，代金則是用現金取代實際物品的意思，也是現代人比較方便的做法，阿寶了解到原來可以使用這種方法來籌措經費。　
+                <br> 
                
             </p>  
         </div>
