--- a/3_taichangshuitou.html
+++ b/3_taichangshuitou.html
@@ -28,7 +28,9 @@
                 <img src="pic/3-1_taichangshuitou.JPG" alt="godpic" class="godpic">      
             </div>
             <p class="godintro">
-                &emsp; &emsp;阿寶騎車來到了太昌村，在熱心居民的介紹下，驚訝的發現太昌村共有3間土地公廟，於是他選擇了其中一間–「水頭福德寺祠」拜訪，他看有位耆老在樹下乘涼，於是向前詢問過去這裡是如何幫土地公慶生的，耆老回答：「過去這裡齁，在2/2和8/15的時候，會開三桌大桌的，大概30人，然後附近的居民會一起來吃，一個人啊，繳交兩斤豬肉，阿現在阿，一個人繳交五百塊就可以了」，阿寶發現繳交多少肉，也因各地習慣不同也有所不同，似乎許多村莊都採用代金的方式來舉辦活動了，阿寶再次陷入思考，要如何舉辦土地公的生日活動了。<br> 
+                &emsp; &emsp;阿寶騎車來到了太昌村，在熱心居民的介紹下，驚訝的發現太昌村共有三間土地公廟，於是他選擇了其中一間—水頭福德寺祠拜訪，他看到有位耆老在樹下乘涼，並向前詢問這個地方過去是如何幫土地公慶生的。
+                &emsp; &emsp;耆老回答：「過去這裡齁(清痰)，在二月二號和八月十五號的時候，會開三桌大桌的，大概三十人，然後會邀請附近的居民一起來吃，一個人啊，繳交兩斤豬肉，阿……現在阿，一個人繳交五百塊就可以了。」阿寶發現繳交多少肉，也因各地習慣不同而不一樣，似乎大多村莊現在都採用代金的方式來舉辦活動了，阿寶再次陷入思考，到底該如何舉辦土地公的生日活動呢?
+                <br> 
                
             </p>  
         </div>
