--- a/4_changwu.html
+++ b/4_changwu.html
@@ -26,8 +26,9 @@
             <div class="godintrodisplay">
                 <img src="pic/4-1_changwu.JPG" alt="godpic" class="godpic">      
             </div>
-            <p class="godintro1">土地公名稱:長屋伯公廟 福德正神</br>特色:永興一街和永興二街之間的稻田內，有一間著名的「長屋伯公廟」，之所以稱為「長屋」，則是因為此地在日治時期有兩三排長長的木屋所形成的小聚落，傳說長屋在民國36年的一場大水災中遭到損毀，雖然木屋至今已無痕跡，但是留下了「長屋」這個地名。</br>地點:973花蓮縣吉安鄉永興一街9號</p>
-            <p class="godintro">&emsp; &emsp;永興一街和永興二街之間的稻田內，有一間著名的「長屋伯公廟」，之所以稱為「長屋」，則是因為此地在日治時期有兩三排長長的木屋所形成的小聚落，傳說長屋在民國36年的一場大水災中遭到損毀，雖然木屋至今已無痕跡，但是留下了「長屋」這個地名。<br> 
+            <p class="godintro1">土地公名稱:長屋伯公廟 福德正神</br> 地點:973花蓮縣吉安鄉永興一街9號<br>特色:永興一街和永興二街之間的稻田內，有一間著名的「長屋伯公廟」，之所以稱為「長屋」，則是因為此地在日治時期有兩三排長長的木屋所形成的小聚落，傳說長屋在民國36年的一場大水災中遭到損毀，雖然木屋至今已無痕跡，但是留下了「長屋」這個地名。</br></p>
+            <p class="godintro">
+              &emsp; &emsp;永興一街和永興二街之間的稻田內，有一間著名的「長屋伯公廟」，之所以稱為「長屋」，則是因為此地在日治時期有兩三排長長的木屋所形成的小聚落，傳說長屋在民國36年的一場大水災中遭到損毀，雖然木屋至今已無痕跡，但是留下了「長屋」這個地名。<br> 
                     &emsp; &emsp;吉安鄉永興村在日治時期原屬於吉野移民村的草分部落(くちわけ)，是「最初收容移民之地」，民國37年改名為「永興村」居民大多為從西部來到此的客家人，一來日本時代移民村的拓墾需要大量勞動力，二來西部的人口已經趨近飽和，三者在民國24年的新竹苗栗大地震中，不少客家人的聚落因此受損，為了尋覓新的天地，這些客家人紛紛前來素有後山之稱的花蓮港，最後在此地落腳。 <br> 
                     &emsp;&emsp;於稻田中的長屋伯公廟，屬水泥建造廟宇，紅色燕尾屋頂搭配上淡黃色外牆，洗石子圓柱，磨石子貼磁磚供桌，外觀典雅舒適。廟內正中央閉上安著石雕的伯公神像，造型渾圓可愛，伯公穿著員外裝，鬚眉浩然，右手持拐杖左手拿著金元寶，笑咪咪的看著人們。 <br> 
                     &emsp; &emsp;神像前為石雕香爐，上刻「福德正神」四字，而在伯公右側案上則是一顆天然橢圓形石頭，中央彷彿是伯公持柺站立的紋樣，這塊石頭為專門保佑孩童平安長大的石爺。廟內至今仍保存早年此地居民向伯公祈求的藥籤，這些藥籤均為長方形，內容多是中藥藥方，近年由於醫療方便，藥籤早已不再使用。<br> 
@@ -72,7 +73,6 @@
 </div>
 <div id="divineroom" style="width: 100%;text-align:center;display:none">
      <img id="divpic" src="" style="margin:auto;" width="100%" alt="" />
-      <a id="gotourl" href="#" class="button primary" style="font-size:18px;font-weight:bold;width:100%">觀看籤詩說明</a>
 </div>
 
 </div>   
