--- a/8_dongchang.html
+++ b/8_dongchang.html
@@ -27,7 +27,8 @@
             <div class="godintrodisplay">
                 <img src="pic/8-2_dongchang.JPG" alt="godpic" class="godpic">      
             </div>
-            <p class="godintro1">土地公名稱:東昌福德祠福德正神</br>特色:東昌村二間福德廟中，東里十五街巷弄內的伯公較早設置，原是世居於此的南勢阿美族里漏社居民以石頭作為祭祀伯公，並以原住民祭典儀式進行，保留完整關於土地的傳統祭儀。<br>
+            <p class="godintro1">土地公名稱:東昌福德祠福德正神</br>特色:
+                   &emsp; &emsp;東昌村二間福德廟中，東里十五街巷弄內的伯公較早設置，原是世居於此的南勢阿美族里漏社居民以石頭作為祭祀伯公，並以原住民祭典儀式進行，保留完整關於土地的傳統祭儀。<br>
                 &emsp; &emsp;最初東昌福德祠為當地里漏社阿美族人所建造，創建年代不詳，外觀為小型的水泥造土地廟，一開始並沒有伯公神像，只有一面白色大理石板，上刻「福德正神香位」等字，只有阿美族人會前來膜拜，並在這裡舉行misatulikung祭儀。<br>
 </br></p>
             <p class="godintro">隨著漢人逐漸遷移來此居住，也開始來伯公祭拜，其中有虔誠信眾竟將一尊伯公金身擺放到神位上，隨著漢人信徒的逐漸增加，最後東昌福德祠成為漢人主持的廟宇，阿美族人在百般無奈之餘，民國75年在東海十街覓地興建新的福德祠，於民國82年之後在新的土地廟舉辦祭儀。<br>
