--- a/4_changwu.html
+++ b/4_changwu.html
@@ -26,12 +26,13 @@
             <div class="godintrodisplay">
                 <img src="pic/4-1_changwu.JPG" alt="godpic" class="godpic">      
             </div>
-            <p class="godintro1">土地公名稱:長屋伯公廟 福德正神</br> 地點:973花蓮縣吉安鄉永興一街9號<br>
+            <p class="godintro1">
               故事:&emsp; &emsp;於是又來到了下一個伯公廟「長屋福德祠」，然而他發現這裡沒有看到廟公，在四處張望時，他發現有很多格子的箱子，並且每個盒子都有對應的編號，他正觀察盒子內存放的紙條，納悶紙條有何作用之時，有位好心的老伯伯向前解答。<br>
               &emsp; &emsp;他說：「過去的醫療不發達，身體如有不適，都是會向神明請示，治療的方法，並向神明祈求對應的處方籤，再前去中藥行配藥。」<br>
               &emsp; &emsp;並詳細的解釋該如何求籤，阿寶想到最近有胃寒情況，於是照著老伯伯的話操作一遍後，心想若老伯伯對傳統習俗如此了解，或許也知道該如何幫土地公做生日，正當取得藥籤時，轉頭要詢問，發現老伯伯已經先行離開了，阿寶只好繼續前往了下一間伯公廟尋求答案。<br>
               </br></p>
             <p class="godintro">
+              土地公名稱:長屋伯公廟 福德正神</br> 地點:973花蓮縣吉安鄉永興一街9號<br>
                     &emsp; &emsp;永興一街和永興二街之間的稻田內，有一間著名的「長屋伯公廟」，之所以稱為「長屋」，則是因為此地在日治時期有兩三排長長的木屋所形成的小聚落，傳說長屋在民國36年的一場大水災中遭到損毀，雖然木屋至今已無痕跡，但是留下了「長屋」這個地名。<br> 
                     &emsp; &emsp;吉安鄉永興村在日治時期原屬於吉野移民村的草分部落(くちわけ)，是「最初收容移民之地」，民國37年改名為「永興村」居民大多為從西部來到此的客家人，一來日本時代移民村的拓墾需要大量勞動力，二來西部的人口已經趨近飽和，三者在民國24年的新竹苗栗大地震中，不少客家人的聚落因此受損，為了尋覓新的天地，這些客家人紛紛前來素有後山之稱的花蓮港，最後在此地落腳。 <br> 
                     &emsp;&emsp;於稻田中的長屋伯公廟，屬水泥建造廟宇，紅色燕尾屋頂搭配上淡黃色外牆，洗石子圓柱，磨石子貼磁磚供桌，外觀典雅舒適。廟內正中央閉上安著石雕的伯公神像，造型渾圓可愛，伯公穿著員外裝，鬚眉浩然，右手持拐杖左手拿著金元寶，笑咪咪的看著人們。 <br> 
