--- a/8_dongchang.html
+++ b/8_dongchang.html
@@ -27,14 +27,15 @@
             <div class="godintrodisplay">
                 <img src="pic/8-2_dongchang.JPG" alt="godpic" class="godpic">      
             </div>
-            <p class="godintro1">土地公名稱:東昌福德祠福德正神</br>特色:<br>
-                   &emsp; &emsp;東昌村二間福德廟中，東里十五街巷弄內的伯公較早設置，原是世居於此的南勢阿美族里漏社居民以石頭作為祭祀伯公，並以原住民祭典儀式進行，保留完整關於土地的傳統祭儀。<br>
-                &emsp; &emsp;最初東昌福德祠為當地里漏社阿美族人所建造，創建年代不詳，外觀為小型的水泥造土地廟，一開始並沒有伯公神像，只有一面白色大理石板，上刻「福德正神香位」等字，只有阿美族人會前來膜拜，並在這裡舉行misatulikung祭儀。</p>
+            <p class="godintro1">土地公名稱:東昌福德祠福德正神</br>故事:<br>
+                回到東昌福德祠後，看到今天去各處伯公廟，尋找做生日方法的阿寶，阿寶的爸爸備感欣慰，於是跟阿寶說到這裡二月二號伯公誕辰會宴客吃福，這次就由阿寶你帶領當地的居民一同舉辦吧！阿寶從過程中了解，土地公是希望他能好好地認識在地的信仰，了解傳統文化相似相異之處，並將其保存、延續下去。
             <p class="godintro">
+                &emsp; &emsp;東昌村二間福德廟中，東里十五街巷弄內的伯公較早設置，原是世居於此的南勢阿美族里漏社居民以石頭作為祭祀伯公，並以原住民祭典儀式進行，保留完整關於土地的傳統祭儀。<br>
+                &emsp; &emsp;最初東昌福德祠為當地里漏社阿美族人所建造，創建年代不詳，外觀為小型的水泥造土地廟，一開始並沒有伯公神像，只有一面白色大理石板，上刻「福德正神香位」等字，只有阿美族人會前來膜拜，並在這裡舉行misatulikung祭儀。<br>
                 &emsp; &emsp;隨著漢人逐漸遷移來此居住，也開始來伯公祭拜，其中有虔誠信眾竟將一尊伯公金身擺放到神位上，隨著漢人信徒的逐漸增加，最後東昌福德祠成為漢人主持的廟宇，阿美族人在百般無奈之餘，民國75年在東海十街覓地興建新的福德祠，於民國82年之後在新的土地廟舉辦祭儀。<br>
                 &emsp; &emsp;東昌福德廟雖然信眾由阿美族人變為漢人，不過伯公依舊保佑此地眾生，原本的小廟後來改建為中型廟宇，而最初刻著「福德正神香位」的石板以紅紙仔細包裹，安置於廟內的伯公神尊後面。神桌上供奉著伯公以及土地婆神像，正中央的伯公神像不出門，所以需要出巡時會請旁邊的金身，最右邊大尊的伯公則是爐主擁有，廟內兩旁壁上掛著平安燈，門旁邊懸掛未改建前的舊貌照片。<br>
-                &emsp; &emsp;目前每年農曆二月二日伯公誕辰會宴客吃福，農曆七月十三日舉辦普渡，現任廟公葉先生表示，東昌伯公非常靈驗，會透過夢兆提醒舉辦的祭典或是點燈的注意事項，伯公非常照顧地方，所以東昌伯公香火一直非常興旺。<br>
-                &emsp; &emsp;回到東昌福德祠後，阿寶的爸爸看到今天去各處伯公廟尋找幫伯公作生日方法的阿寶，他覺得備感欣慰，於是跟阿寶說到這裡二月二號伯公誕辰會宴客吃福，這次就由阿寶你帶領當地的居民一同舉辦吧，阿寶從過程中了解到，原來土地公是希望他好好了解在地的信仰，認識土地的傳統文化，並將其延續下去。
+                &emsp; &emsp;目前每年農曆二月二日伯公誕辰會宴客吃福，農曆七月十三日舉辦普渡，現任廟公葉先生表示，東昌伯公非常靈驗，會透過夢兆提醒舉辦的祭典或是點燈的注意事項，伯公非常照顧地方，所以東昌伯公香火一直非常興旺
+                
 </p>
         </div>
         
