--- a/3_taichangshuitou.html
+++ b/3_taichangshuitou.html
@@ -27,9 +27,7 @@
             <div class="godintrodisplay">
                 <img src="pic/3-1_taichangshuitou.JPG" alt="godpic" class="godpic">      
             </div>
-            <p class="godintro">
-                <p class="godintro">
-                </p>
+            <p class="godintro">   
                 &emsp; &emsp;阿寶騎車來到了太昌村，在熱心居民的介紹下，驚訝的發現太昌村共有三間土地公廟，於是他選擇了其中一間—水頭福德寺祠拜訪，他看到有位耆老在樹下乘涼，並向前詢問這個地方過去是如何幫土地公慶生的。<br>
                 &emsp; &emsp;耆老回答：「過去這裡齁(清痰)，在二月二號和八月十五號的時候，會開三桌大桌的，大概三十人，然後會邀請附近的居民一起來吃，一個人啊，繳交兩斤豬肉，阿……現在阿，一個人繳交五百塊就可以了。」阿寶發現繳交多少肉，也因各地習慣不同而不一樣，似乎大多村莊現在都採用代金的方式來舉辦活動了，阿寶再次陷入思考，到底該如何舉辦土地公的生日活動呢?
                 <br> 
@@ -41,7 +39,7 @@
             <div class="game">
                 
                 <p class="godintro">
-                    土地公名稱:太昌水頭福德寺 地點:23.990430, 121.556539 &emsp; &emsp;吉安鄉明義七街99巷34號隔壁(水頭)七腳川部落   
+                    土地公名稱:太昌水頭福德寺 地點:23.990430, 121.556539 &emsp; &emsp;吉安鄉明義七街99巷34號隔壁(水頭)七腳川部落   <br>
                     &emsp; &emsp;太昌村水頭福德廟位在明義七街巷弄內，在原住民多數的村落裡，竟然隱身百年之久，從廟裡的大小不同匾額來看，水頭伯公真是非常受到民眾愛戴，這些感謝話語刻在石頭或木頭上，希望把對於福德伯公的讚頌久遠流傳。<br>
                     &emsp; &emsp;明義七街舊稱山邊路，因為馬路就在中央山脈山腳下，所以福德公廟拜亭前面鑲著一塊大理石匾，刻著「吉安鄉福德公廟  太昌村山邊路」，古老中感受到伯公的庇佑源遠流長。另外廟的內側有「鎮護地方」木匾，帶著威嚴的護佑，也是福德廟在此百年深獲民心的見證。<br>
                     &emsp; &emsp;廟門前有紅色花崗石對聯「福祉社稷感至正，德澤鄉梓尊格神」，上方則是「心誠應則靈」。廟內神龕背後牆上貼著天師符，神龕上安置三尊伯公神像，其中兩尊為木雕，一尊為石雕，正中主尊伯公身形略大，石雕伯公則在左側，右手持杖左手持元寶，也是廟宇中最古老的神像。<br>
