--- a/7_dongchangaborigin.html
+++ b/7_dongchangaborigin.html
@@ -28,7 +28,8 @@
                 <img src="pic/7-2_dongchangaborigin.JPG" alt="godpic" class="godpic">      
             </div>
             <p class="godintro">
-                &emsp; &emsp;阿寶的阿姨是阿美族的族人，她向阿寶說道；這間伯公廟是原住民僅有的一間，這間伯公廟一年有兩次的土地祭儀，大約在第一、二期稻作插秧號的假日舉行，部落內會殺豬、準備供品，並由里漏部落的祭師遵循古禮進行。阿姨向阿寶提到，或許可以問問信眾們，該如何幫神明做生日，阿寶心想：「也對每間伯公廟都有不同的祭儀方式或傳統，不如問問祂的信眾們的想法吧」。<br> 
+                &emsp; &emsp;阿寶的阿姨是阿美族的族人，她向阿寶說道；這間伯公廟是原住民僅有的一間，這間伯公廟一年有兩次的土地祭儀，大約在第一、二期稻作插秧號的假日舉行，部落內會殺豬、準備供品，並由里漏部落的祭師遵循古禮進行。
+                &emsp; &emsp;阿姨向阿寶提到，或許可以問問信眾們，該如何幫神明做生日，阿寶心想：「也對每間伯公廟都有不同的祭儀方式或傳統，不如問問祂的信眾們的想法吧」。<br> 
                
             </p>  
         </div>
