--- a/3_taichangshuitou.html
+++ b/3_taichangshuitou.html
@@ -39,7 +39,7 @@
             <div class="game">
                 
                 <p class="godintro">
-                    土地公名稱:太昌水頭福德寺 地點:23.990430, 121.556539 &emsp; &emsp;吉安鄉明義七街99巷34號隔壁(水頭)七腳川部落   <br>
+                    土地公名稱:太昌水頭福德寺 地點:23.990430, 121.556539 吉安鄉明義七街99巷34號隔壁(水頭)七腳川部落 <br>
                     &emsp; &emsp;太昌村水頭福德廟位在明義七街巷弄內，在原住民多數的村落裡，竟然隱身百年之久，從廟裡的大小不同匾額來看，水頭伯公真是非常受到民眾愛戴，這些感謝話語刻在石頭或木頭上，希望把對於福德伯公的讚頌久遠流傳。<br>
                     &emsp; &emsp;明義七街舊稱山邊路，因為馬路就在中央山脈山腳下，所以福德公廟拜亭前面鑲著一塊大理石匾，刻著「吉安鄉福德公廟  太昌村山邊路」，古老中感受到伯公的庇佑源遠流長。另外廟的內側有「鎮護地方」木匾，帶著威嚴的護佑，也是福德廟在此百年深獲民心的見證。<br>
                     &emsp; &emsp;廟門前有紅色花崗石對聯「福祉社稷感至正，德澤鄉梓尊格神」，上方則是「心誠應則靈」。廟內神龕背後牆上貼著天師符，神龕上安置三尊伯公神像，其中兩尊為木雕，一尊為石雕，正中主尊伯公身形略大，石雕伯公則在左側，右手持杖左手持元寶，也是廟宇中最古老的神像。<br>
