--- a/2_yongan.html
+++ b/2_yongan.html
@@ -38,7 +38,8 @@
             <div class="game">    
                 <p class="godintro">
                 土地公名稱:永安永安宮<br>地點:23.986922, 121.582469  &emsp; &emsp;吉安鄉明仁二街16巷6號 <br>
-                &emsp; &emsp;永安宮是永安村裡的伯公，以農田為主的永安村，日治時期原是吉野移民村「北園」的一部分，戰後最初為太昌村，民國77年行政規劃之後，才自太昌村劃分為永安村。目前永安村民栽種有機蔬菜供應花蓮市場，農田中的永安宮，相傳在日治時期就已奠基於此。
+                &emsp; &emsp;永安宮是永安村裡的伯公，以農田為主的永安村，日治時期原是吉野移民村「北園」的一部分，戰後最初為太昌村，民國77年行政規劃之後，才自太昌村劃分為永安村。
+                &emsp; &emsp;目前永安村民栽種有機蔬菜供應花蓮市場，農田中的永安宮，相傳在日治時期就已奠基於此。
                 &emsp; &emsp;永安宮早在民國30年即由當地信士林來添發起設置，最初只是一間小型的土地廟，雖然簡陋卻是集結民眾誠心祈求，因此拜伯公逐漸成為心靈依靠重心，從廟旁的清涼亭內碑刻敘述「位座正東向正西，地靈淨域，有謂清溪一曲，青雲繞戶之聖地」，可以想見當年廟宇設立時景象。<br>
                 &emsp; &emsp;一直到了民國38年開始組有福德會，每年農曆二月二日及八月十五日舉辦慶典活動，早年每位會員繳交一斤豬肉代金，交由爐主辦桌，謂之「吃福」，祈求風調雨順，五穀豐收、六畜興旺、國泰民安。<br>
                 &emsp; &emsp;由於早年所興建的小廟狹隘陳舊，因此在民國71年由值年爐主柯鳳舞信士發起重新修建，獲各方大德鼎力捐獻襄助，用資八十餘萬元，費時五個月終於完成現在的永安宮。於民國82年時增建拜亭，民國87年繼修建新的金爐，現在永安宮由「花蓮縣吉安鄉永安福德協會」負責管理。<br>
