--- a/8_dongchang.html
+++ b/8_dongchang.html
@@ -27,8 +27,9 @@
             <div class="godintrodisplay">
                 <img src="pic/8-2_dongchang.JPG" alt="godpic" class="godpic">      
             </div>
-            <p class="godintro1">土地公名稱:東昌福德祠福德正神</br>故事:<br>
-                回到東昌福德祠後，看到今天去各處伯公廟，尋找做生日方法的阿寶，阿寶的爸爸備感欣慰，於是跟阿寶說到這裡二月二號伯公誕辰會宴客吃福，這次就由阿寶你帶領當地的居民一同舉辦吧！阿寶從過程中了解，土地公是希望他能好好地認識在地的信仰，了解傳統文化相似相異之處，並將其保存、延續下去。
+            <p class="godintro">土地公名稱:東昌福德祠福德正神</br>故事:<br>
+                &emsp; &emsp;回到東昌福德祠後，看到今天去各處伯公廟，尋找做生日方法的阿寶，阿寶的爸爸備感欣慰，於是跟阿寶說到這裡二月二號伯公誕辰會宴客吃福，這次就由阿寶你帶領當地的居民一同舉辦吧！<br>
+                &emsp; &emsp;阿寶從過程中了解，土地公是希望他能好好地認識在地的信仰，了解傳統文化相似相異之處，並將其保存、延續下去。
             <p class="godintro">
                 &emsp; &emsp;東昌村二間福德廟中，東里十五街巷弄內的伯公較早設置，原是世居於此的南勢阿美族里漏社居民以石頭作為祭祀伯公，並以原住民祭典儀式進行，保留完整關於土地的傳統祭儀。<br>
                 &emsp; &emsp;最初東昌福德祠為當地里漏社阿美族人所建造，創建年代不詳，外觀為小型的水泥造土地廟，一開始並沒有伯公神像，只有一面白色大理石板，上刻「福德正神香位」等字，只有阿美族人會前來膜拜，並在這裡舉行misatulikung祭儀。<br>
