--- a/4_changwu.html
+++ b/4_changwu.html
@@ -27,7 +27,7 @@
                 <img src="pic/4-1_changwu.JPG" alt="godpic" class="godpic">      
             </div>
             <p class="godintro">
-              故事:&emsp; &emsp;於是又來到了下一個伯公廟「長屋福德祠」，然而他發現這裡沒有看到廟公，在四處張望時，他發現有很多格子的箱子，並且每個盒子都有對應的編號，他正觀察盒子內存放的紙條，納悶紙條有何作用之時，有位好心的老伯伯向前解答。<br>
+              故事:<br>&emsp; &emsp;於是又來到了下一個伯公廟「長屋福德祠」，然而他發現這裡沒有看到廟公，在四處張望時，他發現有很多格子的箱子，並且每個盒子都有對應的編號，他正觀察盒子內存放的紙條，納悶紙條有何作用之時，有位好心的老伯伯向前解答。<br>
               &emsp; &emsp;他說：「過去的醫療不發達，身體如有不適，都是會向神明請示，治療的方法，並向神明祈求對應的處方籤，再前去中藥行配藥。」<br>
               &emsp; &emsp;並詳細的解釋該如何求籤，阿寶想到最近有胃寒情況，於是照著老伯伯的話操作一遍後，心想若老伯伯對傳統習俗如此了解，或許也知道該如何幫土地公做生日，正當取得藥籤時，轉頭要詢問，發現老伯伯已經先行離開了，阿寶只好繼續前往了下一間伯公廟尋求答案。<br>
               </br></p>
