--- a/1_fujin.html
+++ b/1_fujin.html
@@ -26,7 +26,7 @@
                 <img src="pic/1-1_fujin.JPG" alt="godpic" class="godpic">
                
             </div>
-             <p class="godintro1">土地公名稱:北昌福境宮 福德正神</br></br>地點:973花蓮縣吉安鄉建昌路192號 電話:03 857 9087<br><a href="https://reurl.cc/0X6my9"><i class="fa-brands fa-facebook"></i></a></p>
+             <p class="godintro1">土地公名稱:北昌福境宮 福德正神 地點:973花蓮縣吉安鄉建昌路192號 電話:03 857 9087<br><a href="https://reurl.cc/0X6my9"><i class="fa-brands fa-facebook"></i></a></p>
             <p class="godintro">  &emsp; &emsp;福德伯公靈驗奇事在福境宮真是說不盡，尤其是建廟的過程，真是充滿著伯公的愛民作為，因此也讓這座原本只是農田中的小廟，數十年間已是縣內少數的福德大廟，逐漸成為附近居民信仰重心。<br> 
                 &emsp; &emsp;在過往農耕時代裡，中央路附近的太昌村屬於較偏遠地區，一大片農田之中少有居民，因此當地的農民要祈求福德伯公祝福，則需要越過幾處田地才能到鄰近的伯公拜拜，加上地處偏僻，常會有牛隻或是農作失竊的事件發生，所以當時居民自主性發起民防團體，這次同時也提議建新小型田頭土地廟以護境安民，由地方人士擲杯輪流選派爐主負責管理廟務，就是福境宮最初興建的源起。<br> 
                 &emsp; &emsp;廟宇大約在民國36年左右落成，最初原名田頭伯公祠，而自伯公祠建立之後，治安確實獲得改善，此後伯公靈驗事蹟漸傳，因此香火鼎盛。直到1980年，伯公祠位道路用地，將面臨拆除，奇妙的是在拆除過程中，怪手機械都會故障而無法作業，最後由當時縣長吳水雲出面向伯公請示後，決定在旁擇地遷建，並由縣政府發包興建，經向伯公擲杯允杯後順利遷建。並於1984年由原本的伯公祠改名為「福境宮」，2013年再更名為「花蓮福境宮」。<br> 
