--- a/2_yongan.html
+++ b/2_yongan.html
@@ -37,7 +37,7 @@
         <div class="wrap">
             <div class="game">    
                 <p class="godintro">
-                土地公名稱:永安永安宮<br>地點:23.986922, 121.582469  &emsp; &emsp;吉安鄉明仁二街16巷6號 <br>
+                土地公名稱:永安永安宮 地點:23.986922, 121.582469  &emsp; &emsp;吉安鄉明仁二街16巷6號 <br>
                 &emsp; &emsp;永安宮是永安村裡的伯公，以農田為主的永安村，日治時期原是吉野移民村「北園」的一部分，戰後最初為太昌村，民國77年行政規劃之後，才自太昌村劃分為永安村。
                 &emsp; &emsp;目前永安村民栽種有機蔬菜供應花蓮市場，農田中的永安宮，相傳在日治時期就已奠基於此。
                 &emsp; &emsp;永安宮早在民國30年即由當地信士林來添發起設置，最初只是一間小型的土地廟，雖然簡陋卻是集結民眾誠心祈求，因此拜伯公逐漸成為心靈依靠重心，從廟旁的清涼亭內碑刻敘述「位座正東向正西，地靈淨域，有謂清溪一曲，青雲繞戶之聖地」，可以想見當年廟宇設立時景象。<br>
