--- a/6_renhanfude.html
+++ b/6_renhanfude.html
@@ -29,9 +29,9 @@
             </div>
             <p class="godintro">
                 &emsp; &emsp;接著阿寶來到仁和的福德寺，映入眼簾的是一棵大榕樹，環境十分幽靜，阿寶今天跑了好幾間廟決定在這歇息一會，微風徐徐的吹，他睡著了，阿寶再次夢到向他託夢的土地公，祂向阿寶介紹了這間土地公是如何舉辦生日的。<br>
-                祂說：「仁和福德寺這裡在農曆二月二號及八月十五號的時候有大拜拜，但都不會辦桌，二月二號會提供鹹湯圓及發糕，八月十五號則是炒米粉及酸菜鴨肉湯，拜拜後會分發福糕給信眾們。」<br>
-                阿寶納悶之際，向土地公問到，那祢想要如何做生日呢，土地公笑道：「交給你想辦法囉，我要去巡視土地了。」<br>
-                鈴！鈴！鈴！阿寶驚醒，這時電話響了，阿寶的阿姨打電話找他一起去東昌另一間土地公廟看看有沒有其他線索。<br>　
+                &emsp; &emsp;祂說：「仁和福德寺這裡在農曆二月二號及八月十五號的時候有大拜拜，但都不會辦桌，二月二號會提供鹹湯圓及發糕，八月十五號則是炒米粉及酸菜鴨肉湯，拜拜後會分發福糕給信眾們。」<br>
+                &emsp; &emsp;阿寶納悶之際，向土地公問到，那祢想要如何做生日呢，土地公笑道：「交給你想辦法囉，我要去巡視土地了。」<br>
+                &emsp; &emsp;鈴！鈴！鈴！阿寶驚醒，這時電話響了，阿寶的阿姨打電話找他一起去東昌另一間土地公廟看看有沒有其他線索。<br>　
            
                
             </p>  
