--- a/7_dongchangaborigin.html
+++ b/7_dongchangaborigin.html
@@ -36,7 +36,7 @@
         <h3 class="intro_title">介紹</h3>
         <div class="wrap">
             <div class="game">
-                <p class="godintro1">土地公名稱:東昌原住民福德正神<br>地點:23.959383, 121.600361 </p>
+                <p class="godintro1">土地公名稱:東昌原住民福德正神 地點:23.959383, 121.600361 </p>
                 <p class="godintro">
                     &emsp; &emsp; 東昌村福德廟是全台唯一原住民拜祭伯公，難得的祭祀儀式相傳數十年，特殊起源皆因歷史變遷之下的生活融合。早期東昌村為南勢阿美族里漏社，傳說祖先乘坐獨木舟漂流至此，後來在昭和12年(1937)根據這個傳說將此地改名為舟津，戰後先改名為化仁村，民國66年改名為東昌村。<br> 
                     &emsp; &emsp; 里漏社居民以原住民爲多數，最初世居當地的阿美族人為了祭祀土地，在東昌村東里15街和東里15街39巷交叉路口放置一塊石頭，並進行祭拜儀式，尋求心靈平安與依靠。這樣的習俗隨著漢人遷入，也一起祭拜，漸漸成為伯公形式。<br> 
