--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
        
          <h2 class="map_title">土地公地圖</h2>
+         按照順序點擊途中寺廟，來幫助阿寶舉辦土地公生日
         <div class="mapmain">
           <div class="map">
             <img src="pic/mapmainview.png" alt="map" class="mappic">
