--- a/5_yongxinzhuangtou.html
+++ b/5_yongxinzhuangtou.html
@@ -37,7 +37,7 @@
         <h3 class="intro_title">介紹</h3>
         <div class="wrap">
             <div class="game">
-                <img src="image/shongpi.jpg">
+                <img src="image/shongpi.jpg" height="50%" weight="50%">
             <p class="godintro1">土地公名稱:永興庄頭伯公廟 地點:23.954645571103928, 121.57011370156584 </p>
                 <p class="godintro">
                     &emsp; &emsp;與福德伯公依存深厚的仁和村民，雖說是原住民部落，但是對於地方守護神的敬畏從日治時期就已經開始。過往仁和村屬南勢阿美族薄薄社的一部分，昭和12年(1937)此地改稱為「南埔」。二戰後原本的南機場改為空軍防空學校，防校被裁撤後，部分仍為軍方所使用，另一部分則是著名觀光景點知卡宣森林公園，仁和福德祠就位於知卡宣公園北邊巷弄內。<br>
