--- a/header.html
+++ b/header.html
@@ -1,14 +1,14 @@
 <script src="https://kit.fontawesome.com/aad679a23e.js" crossorigin="anonymous"></script>
  <nav class="navbar navbar-expand-md navbar-light bg-success">
   <div class="container-fluid">
-    <a class="navbar-brand" href="Jian.html">吉安土地公</a>
+    <a class="navbar-brand" href="index.html">吉安土地公</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="Jian.html">首頁</a>
+          <a class="nav-link active" aria-current="page" href="index.html">首頁</a>
         </li>
 <!--
         <li class="nav-item">
