--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
           
     </div>
     <div class="circle">
-      <button class="clue" id="but" onclick="backtotop()"><i class="fa-solid fa-circle-arrow-up"></i></button>
+      <button class="clue" id="back" onclick="backtotop()"><i class="fa-solid fa-circle-arrow-up"></i></button>
     </div>
      
 
 <script type="text/javascript">
              function backtotop(){
-    but = document.getElementById('back');
+    top = document.getElementById('back');
     document.documentElement.scrollTop = 0;
 }
 </script>
