--- a/1_fujin.html
+++ b/1_fujin.html
@@ -23,7 +23,7 @@
 
          <div class="introduce">
             <div class="godintrodisplay">
-                <img src="pic/1-1_fujin.jpg" alt="godpic" class="godpic">
+                <img src="C:\newxampp\htdocs\jian\USR\pic\1-1_fujin.jpg" alt="godpic" class="godpic">
                
             </div>
              <p class="godintro1">土地公名稱:北昌福境宮 福德正神 地點:973花蓮縣吉安鄉建昌路192號 電話:03 857 9087<br><a href="https://reurl.cc/0X6my9"><i class="fa-brands fa-facebook"></i></a></p>
