--- a/2_yongan.html
+++ b/2_yongan.html
@@ -25,7 +25,7 @@
        
         <div class="introduce">
             <div class="godintrodisplay">
-                <img src="pic/2-1_yongan.jpg" alt="godpic" class="godpic">      
+                <img src="pic/2-1_yongan.JPG" alt="godpic" class="godpic">      
             </div>
          
             <p class="godintro"> 
