--- a/3_taichangshuitou.html
+++ b/3_taichangshuitou.html
@@ -25,7 +25,7 @@
         
         <div class="introduce">
             <div class="godintrodisplay">
-                <img src="pic/3-1_taichangshuitou.jpg " alt="godpic" class="godpic">      
+                <img src="pic/3-1_taichangshuitou.JPG" alt="godpic" class="godpic">      
             </div>
             <p class="godintro">   
                 &emsp; &emsp;阿寶騎車來到了太昌村，在熱心居民的介紹下，驚訝的發現太昌村共有三間土地公廟，於是他選擇了其中一間—水頭福德寺祠拜訪，他看到有位耆老在樹下乘涼，並向前詢問這個地方過去是如何幫土地公慶生的。<br>
