--- a/4_changwu.html
+++ b/4_changwu.html
@@ -24,7 +24,7 @@
      
         <div class="introduce">
             <div class="godintrodisplay">
-                <img src="pic/4-1_changwu.jpg" alt="godpic" class="godpic">      
+                <img src="pic/4-1_changwu.JPG" alt="godpic" class="godpic">      
             </div>
             <p class="godintro">
               故事:<br>&emsp; &emsp;於是又來到了下一個伯公廟「長屋福德祠」，然而他發現這裡沒有看到廟公，在四處張望時，他發現有很多格子的箱子，並且每個盒子都有對應的編號，他正觀察盒子內存放的紙條，納悶紙條有何作用之時，有位好心的老伯伯向前解答。<br>
