--- a/6_renhanfude.html
+++ b/6_renhanfude.html
@@ -25,7 +25,7 @@
         
         <div class="introduce">
             <div class="godintrodisplay">
-                <img src="pic/6-1_renhanfude.jpg" alt="godpic" class="godpic">      
+                <img src="pic/6-1_renhanfude.JPG" alt="godpic" class="godpic">      
             </div>
             <p class="godintro">
                 &emsp; &emsp;接著阿寶來到仁和的福德寺，映入眼簾的是一棵大榕樹，環境十分幽靜，阿寶今天跑了好幾間廟決定在這歇息一會，微風徐徐的吹，他睡著了，阿寶再次夢到向他託夢的土地公，祂向阿寶介紹了這間土地公是如何舉辦生日的。<br>
