--- a/7_dongchangaborigin.html
+++ b/7_dongchangaborigin.html
@@ -25,7 +25,7 @@
         
         <div class="introduce">
             <div class="godintrodisplay">
-                <img src="pic/7-2_dongchangaborigin.jpg" alt="godpic" class="godpic">      
+                <img src="pic/7-2_dongchangaborigin.JPG" alt="godpic" class="godpic">      
             </div>
             <p class="godintro">
                 &emsp; &emsp;阿寶的阿姨是阿美族的族人，她向阿寶說道；這間伯公廟是原住民僅有的一間，這間伯公廟一年有兩次的土地祭儀，大約在第一、二期稻作插秧號的假日舉行，部落內會殺豬、準備供品，並由里漏部落的祭師遵循古禮進行。<br>
