--- a/8_dongchang.html
+++ b/8_dongchang.html
@@ -25,7 +25,7 @@
      
         <div class="introduce">
             <div class="godintrodisplay">
-                <img src="pic/8-2_dongchang.jpg" alt="godpic" class="godpic">      
+                <img src="pic/8-2_dongchang.JPG" alt="godpic" class="godpic">      
             </div>
             <p class="godintro">土地公名稱:東昌福德祠福德正神</br>故事:<br>
                 &emsp; &emsp;回到東昌福德祠後，看到今天去各處伯公廟，尋找做生日方法的阿寶，阿寶的爸爸備感欣慰，於是跟阿寶說到這裡二月二號伯公誕辰會宴客吃福，這次就由阿寶你帶領當地的居民一同舉辦吧！<br>
