--- a/1_fujin.html
+++ b/1_fujin.html
@@ -36,7 +36,7 @@
         </div>
         
         <h2 class="game_title">小遊戲-第一站來到北昌福境宮，點盞光明燈，祈求找尋路上一路平安</h2>
-                  <center><img src="image/lightintro.jpg" class="in" style="border-radius: 20%; width: 75%;  " ></center>
+                  <center><img src="image/lightintro.jpg" class="in" style="border-radius: 20%; width: 75%; height: 75%; " ></center>
         <div class="game" style="background-image:url('../pic/bdk1.png'); 
         background-size:100% 100%;">
           
