--- a/4_changwu.html
+++ b/4_changwu.html
@@ -46,7 +46,7 @@
         </div>
         
         <h2 class="game_title">小遊戲-藥籤</h2>
-          <center><img src="image/in.jpg" class="in" style=" border-radius: 20%;"></center>
+          <center><img src="image/in.jpg" class="in" style=" border-radius: 20%; height: 75%; width: 75%;"></center>
 <div class="game">
 
 <div class="illustrate" style="font-size: 15px;">
