--- a/header.html
+++ b/header.html
@@ -8,10 +8,11 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         
-<!--
+
         <li class="nav-item">
-          <a class="nav-link" href="fortunestick.html">抽藥籤</a>
+          <a class="nav-link" href="More.html">更多土地公廟看這邊</a>
         </li>
+<!--
         <li class="nav-item">
           <a class="nav-link" href="guangming.html">光明燈</a>
         </li>
