--- a/More.html
+++ b/More.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="css/style.css">
 </head>  
 <body>
-    <iframe src="https://www.tgos.tw/MapSites/EmbedMap?themeid=25121&visual=point" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe src="https://www.tgos.tw/MapSites/EmbedMap?themeid=25121&visual=point" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 </body>
 
 </html>
