--- a/More.html
+++ b/More.html
@@ -16,6 +16,11 @@
 <link rel="stylesheet" href="css/style.css">
 </head>  
 <body>
+<script type="text/javascript">
+        $(function(){
+      $("#header").load("header.html"); 
+    });       
+</script>
     <iframe src="https://www.tgos.tw/MapSites/EmbedMap?themeid=25121&visual=point" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 </body>
 
