--- a/More.html
+++ b/More.html
@@ -21,6 +21,7 @@
       $("#header").load("header.html"); 
     });       
 </script>
+<div id="header"></div>
     <iframe src="https://www.tgos.tw/MapSites/EmbedMap?themeid=25121&visual=point" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 </body>
 
