--- a/6_renhanfude.html
+++ b/6_renhanfude.html
@@ -47,7 +47,20 @@
                     &emsp; &emsp;仁和福德祠位於大榕樹下，環境十分清幽，大約在三十多年前整修，廟宇為廟中廟的形式，也就是在廟體內台座上再建一座小廟，小廟內為石雕伯公神像，伯公身披錦袍，右手持元寶，原本外表為石質原色，後來伯公託夢要求裝金身，所以現在伯公神像外表有彩繪裝金。<br>
                     &emsp; &emsp;小廟旁邊分別有伯公以及土地婆神像，兩尊神像身後均有早年所膜拜的石頭，其中伯公身後的石頭上刻著「石国公」三字，早年廟內貼白色磁磚，近年改為紅色，廟宇以及周圍環境都整修清潔，並有管理人種花美化。而村中之前有人會將流浪神像放在福德祠內，所以後來在福德祠旁邊另外建立一個空間收容這些神像。<br>
                     &emsp; &emsp;仁和福德祠每月農曆初一、十五、初二、十六都有拜拜，每年農曆二月二日、八月十五會有大拜拜，大拜拜不辦桌，二月二日會有鹹湯圓以及發糕，八月十五則是炒米粉以及酸菜鴨肉湯，拜拜後廟方會分送福糕。<br>
-                    
+                    <ul class="nav nav-tabs">
+                        <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="#">Active</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
                     
                 </p>       
             </div>
