--- a/6_renhanfude.html
+++ b/6_renhanfude.html
@@ -49,7 +49,7 @@
                     &emsp; &emsp;仁和福德祠每月農曆初一、十五、初二、十六都有拜拜，每年農曆二月二日、八月十五會有大拜拜，大拜拜不辦桌，二月二日會有鹹湯圓以及發糕，八月十五則是炒米粉以及酸菜鴨肉湯，拜拜後廟方會分送福糕。<br>
                     <ul class="nav nav-tabs">
                         <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="#">Active</a>
+                          <a class="nav-link active" aria-current="page" >Active</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Link</a>
