--- a/6_renhanfude.html
+++ b/6_renhanfude.html
@@ -60,7 +60,13 @@
                         </li>
                       </ul>
                       <div class="tab-content" id="pills-tabContent">
-                        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab"><script src="javascript/puzzle3X3.js"></script></div>
+                        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+                            <div class="main">
+                                <div class="wrap">     
+                                </div >
+                            </div>
+                            <script src="javascript/puzzle3X3.js"></script>
+                        </div>
                         <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">9879</div>
                         <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">123</div>
                       </div>
