--- a/6_renhanfude.html
+++ b/6_renhanfude.html
@@ -67,7 +67,13 @@
                             </div>
                             <script src="javascript/puzzle3X3.js"></script>
                         </div>
-                        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">9879</div>
+                        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+                            <div class="main">
+                                <div class="wrap">     
+                                </div >
+                            </div>
+                            <script src="javascript/puzzle4X4.js"></script>
+                        </div>
                         <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">123</div>
                       </div>
 
