--- a/6_renhanfude.html
+++ b/6_renhanfude.html
@@ -68,8 +68,8 @@
                             <script src="javascript/puzzle3X3.js"></script>
                         </div>
                         <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-                            <div class="main">
-                                <div class="wrap">     
+                            <div class="main1">
+                                <div class="wrap1">     
                                 </div >
                             </div>
                             <script src="javascript/puzzle4X4.js"></script>
