--- a/8_dongchang.html
+++ b/8_dongchang.html
@@ -44,7 +44,9 @@
           
 <div class="game">
 
-  
+  <button id="3X3" value="3">3X3</button>
+  <button id="3X3" value="4">4X4</button>
+  <button id="5X5" value="5">5X5</button>
         <div class="main">
             <div class="wrap">     
             </div >
