--- a/6_renhanfude.html
+++ b/6_renhanfude.html
@@ -60,6 +60,7 @@
                         </li>
                       </ul>
                       <div class="tab-content" id="pills-tabContent">
+
                         <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
                             <div class="main">
                                 <div class="wrap">     
@@ -67,6 +68,7 @@
                             </div>
                             <script src="javascript/puzzle3X3.js"></script>
                         </div>
+
                         <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
                             <div class="main1">
                                 <div class="wrap1">     
@@ -74,7 +76,11 @@
                             </div>
                             <script src="javascript/puzzle4X4.js"></script>
                         </div>
-                        <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">123</div>
+
+                        <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">123
+
+                        </div>
+
                       </div>
 
 
