--- a/8_dongchang.html
+++ b/8_dongchang.html
@@ -43,10 +43,8 @@
         <h2 class="game_title">小遊戲--拼圖</h2>
           
 <div class="game">
+    <input type="number" max="5" min="2" >
 
-  <button id="3X3" value="3">3X3</button>
-  <button id="3X3" value="4">4X4</button>
-  <button id="5X5" value="5">5X5</button>
         <div class="main">
             <div class="wrap">     
             </div >
