--- a/8_dongchang.html
+++ b/8_dongchang.html
@@ -44,7 +44,7 @@
           
 <div class="game">
     <input type="number" max="5" min="2">
-
+    <button id="size" onclick="setsize()"></button>
         <div class="main">
             <div class="wrap">     
             </div >
